Update Fedora info!

--- a/_posts/2015-08-08-distros.md
+++ b/_posts/2015-08-08-distros.md
@@ -71,11 +71,19 @@ non-Gentoo media, so this is an option for those who need it.
 
 ### Fedora and RHEL
 
-TODO.  Need to talk to a friend who has experience with RH.
-At one time, if you wanted to install Fedora, you used third-party
-media from the [speakupmodified site](http://speakupmodified.org).
-They aren't distributing anything these days, and apparently even
-Fedora's graphical installer has become accessible.
+Fedora's live media comes with Orca, the Gnome screen reader.
+The graphical installer should be accessible.
+To start Orca, first wait for the system to boot.
+There's no audible indication that the boot process has completed, but
+if you are booting from DVD, wait a while after the drive has stopped spinning.
+Press alt+f2, type orca and press enter.
+Orca will start, and you should be in a dialog with two
+buttons: "install Fedora" and "try it out".
+At install time, you should be able to configure Orca so that it is started
+automatically when you boot from the hard drive.
+
+RHEL remains an unknown.  As far as I know, it can't be installed without
+sight, but if someone else knows better, I'd love to be proven wrong.
 
 ## Customized Distros and Third-party Media
 
